fix issue with debug table, better spacing

--- a/themes/feather/assets/css/custom.css
+++ b/themes/feather/assets/css/custom.css
@@ -131,6 +131,11 @@ figcaption {
   background-color: #212529;
 }
 
+.custom-debug-info {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 /* nav */
 
 .custom-nav {
